** Changes in version 4.4 (23 Sep 2013)

* New Features

      Added case insensitive auditing with -E mode

* Bug Fixes

      Added checks against user errors on Hashdeep command line

      Fixed bug for known filenames with the directory in the filename

      Fixed bug for double dots in the filename



** Changes in version 4.3 (24 Oct 2012)

* Bug Fixes

      Fixed check for endian-ness, affecting hash generation on
      big-endian platforms.

      Fixed minor bugs related to OpenSolaris.



** Changes in version 4.2 (11 Jun 2012)

* Bug Fixes

      Fixed padding in Tiger hashes for large files



** Changes in version 4.1.1 (5 Jun 2012)

* Bug Fixes

      Fixed hashdeep bug for known files with commas in their names.
      Cleaned up usage message


** Changes in version 4.1.0 (14 Feb 2012)

* New Features

      Added expert mode option to parse Windows PE files

* Bug Fixes

      Fixed junction point handling on Win32



** Changes in version 4.0.1 (22 Jan 2012)

* Bug Fixes

        Fixed hang on DFXML generation on Win32
	Fixed incorrect hashes via stdin on Win32
	Fixed "Too many open files" error on OS X
	Doc files in Win32 have been corrected.



** Changes in version 4.0 (6 Jan 2012)

* New Features

      	Rewrote most of the program in C++.

	Enabled multiprocessor support on all platforms.

	Removed ten character limit on file size mode

* Bug Fixes

	Too numerous to count!



** Changes in version 3.9.1 (31 May 2011)

* Bug Fixes

      Fixed a cosmetic bugs regarding processing standard input
      in piecewise mode.

      Fixed a bug regarding processing known hash files which have
      parenthesis in the filename.

      Clarified documentation regarding multipliers in piecewise
      mode. They are IEC multipliers, or blocks of 1,024. Side note:
      also spelled 'multipliers' correctly.



** Changes in version 3.9 (21 Apr 2011)

* Bug Fixes

      Fixed a critical bug in hashdeep regarding processing
      standard input


