@@ -1,4 +1,4 @@
-.TH HASHDEEP "1" "v4.4 \- RBF DATE 2012" "AFOSI" "United States Air Force"
+.TH HASHDEEP "1" "v4.4 \- 23 Sep 2013" "AFOSI" "United States Air Force"
 
 .SH NAME
 hashdeep \- Compute, compare, or audit multiple message digests
